implementing speech recognizer with azure

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -22,7 +22,15 @@
 
             </MenuItem>
         </Menu>
-        <ListView DockPanel.Dock="Left" Width="140" SelectedValue="{Binding SelectedNotebook, Mode=TwoWay}" ItemsSource="{Binding Notebooks}">
+
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBlock x:Name="statusTextBlock"/>
+            </StatusBarItem>
+        </StatusBar>
+
+        <ListView DockPanel.Dock="Left" Width="140" SelectedValue="{Binding SelectedNotebook, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  ItemsSource="{Binding Notebooks}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Name}"/>
@@ -40,11 +48,17 @@
             <ToolBar>
                 <Button Content="Speech"
                         Click="SpeechButton_Click"/>
+                <Button x:Name="boldButton" Click="boldButton_Click">
+                    <TextBlock Text="B" FontWeight="Bold" />
+                    
+                </Button>
             </ToolBar>
         </ToolBarTray>
         <Grid>
-            
+            <RichTextBox x:Name="contentRichTextBox" TextChanged="contentRichTextBox_TextChanged"/>
         </Grid>
+
+
         
     </DockPanel>
 </Window>
