inlcuding combo box for fonts

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -52,6 +52,18 @@
                     <TextBlock Text="B" FontWeight="Bold" />
 
                 </ToggleButton>
+                <ToggleButton x:Name="italicButton" Click="italicButton_Click">
+                    <TextBlock Text="I" FontStyle="Italic" />
+
+                </ToggleButton>
+
+                <ToggleButton x:Name="underlineButton" Click="underlineButton_Click">
+                    <TextBlock Text="U" TextDecorations="Underline" />
+
+                </ToggleButton>
+                <ComboBox x:Name="fontFamilyCombox" Width="100" SelectionChanged="fontFamilyCombox_SelectionChanged"/>
+                <ComboBox x:Name="fontSizeComboBox" Width="50" IsEditable="True" TextBoxBase.TextChanged="fontSizeComboBox_TextChanged"/>
+
             </ToolBar>
         </ToolBarTray>
         <Grid>
