--- a/EvernoteClone/View/UserControls/DisplayNote.xaml
+++ b/EvernoteClone/View/UserControls/DisplayNote.xaml
@@ -6,10 +6,15 @@
              xmlns:local="clr-namespace:EvernoteClone.View.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="300">
-    <StackPanel>
-        <TextBlock Text="{Binding Title}" Foreground="Black"
-                   Margin="15" FontSize="15" FontWeight="Bold" VerticalAlignment="Center"/>
-        <TextBlock Text="{Binding UpdatedTime}" Foreground="DodgerBlue"
-                   Margin="10" FontSize="10" VerticalAlignment="Center"/>
+    <StackPanel Margin="15,0"
+                VerticalAlignment="Center">
+        <TextBlock Text="{Binding Title}"
+                   Foreground="Black"
+                   FontSize="15"
+                   FontWeight="Bold"/>
+        <TextBlock Text="{Binding UpdatedAt}"
+                   Margin="0,10,0,0"
+                   Foreground="DodgerBlue"
+                   FontSize="12"/>
     </StackPanel>
 </UserControl>
