--- a/EvernoteClone/View/UserControls/DisplayNotebook.xaml
+++ b/EvernoteClone/View/UserControls/DisplayNotebook.xaml
@@ -5,10 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EvernoteClone.View.UserControls"
              mc:Ignorable="d"
-             d:DesignHeight="100" d:DesignWidth="250">
+             d:DesignHeight="100" d:DesignWidth="300">
     <Grid>
-        <TextBlock Text="{Binding Name}" Foreground="White"
-                   Margin="15" FontSize="14" FontWeight="Bold" VerticalAlignment="Center"/>
-        
+        <TextBlock Text="{Binding Name}"
+                   Foreground="White"
+                   Margin="15"
+                   FontSize="15"
+                   FontWeight="Bold"
+                   VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
